# clfe-application

./: .dockerignore  .env  .gitignore  API_DOCS.md  Dockerfile  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
configs/: mmsa_fet_av.yaml  mmsa_fet_av_language.yaml  sims.yaml
src/clfe/: api.py  cli.py  config.py  data.py  fet_client.py  gradio_app.py  metrics.py  model.py  utils.py  video_feature_extract.py
tools/: .dockerignore  api_server.py  convert_mmsa_to_sims.py  dockerfile  video_feature_extract.py
tools/configs/: mmsa_fet_av_language.yaml
