[project]
name = "clfe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "seaborn>=0.13.2",
    "tensorboardx>=2.6.4",
    "openai-whisper>=20231117",
    "transformers>=4.44.2",
    "torch>=2.3.0",
    "sentencepiece>=0.1.99",
]
