[project]
name = "clfe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "seaborn>=0.13.2",
    "tensorboardx>=2.6.4",
    "openai-whisper>=20250625",
    "transformers>=4.57.1",
    "sentencepiece>=0.2.1",
    "gradio>=5.49.1",
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
    "numpy>=2.3.4",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "huggingface-hub>=0.36.0",
    "scikit-learn>=1.7.2",
    "pyyaml>=6.0.3",
]
